This is Selenium+TestNG Framework

--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -1,4 +1,4 @@
-baseUrl=https://demo.guru99.com/v3/index.php
+baseUrl=https://demo.guru99.com/v4/
  username=mngr266311
  Password=12345678@
  chromepath=./Drivers\\chromedriver.exe
