--- a/log4j.properties
+++ b/log4j.properties
@@ -1,3 +1,6 @@
+// Logs refer to the message genrated during the execution of test and also providing additional context about the test run.
+
+
 // Here we have defined root logger
 log4j.rootLogger=INFO,CONSOLE,R,HTML,TTCC
  
